# corrodedbar

./: Cargo.toml  README.md  build.rs
src/: args.rs  config.rs  example.conf  example.toml  formatter.rs  main.rs  modules.rs  scheduler.rs  utils.rs  wm.rs
src/backend/: mod.rs  stdout.rs  x11.rs
src/module/: backlight.rs  battery.rs  bluetooth.rs  cpu.rs  memory.rs  microphone.rs  mod.rs  network.rs  time.rs  uptime.rs  volume.rs
