[package]
name = "corrodedbar"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = "2.21.0"
chrono = "0.4.34"
pulsectl-rs = "0.3.2"
networkmanager = "0.4.1"
dbus = "0.9.7"
libc = "0.2.153"
signal-hook = "0.3.17"
argp = "0.3.0"
itertools = "0.14.0"
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }

